# edge-tracker

./: .gitignore  .gitmodules  3dpnp.toml  CMakeLists.txt  CMakeLists.txt-vectdb  OpenCVTrace-000.txt  OpenCVTrace.txt  README.md  clickhouse.sql  config.toml  local-camera.toml  main.INFO  main.huangyues-MacBook-Pro.local.moon.log.INFO.20180717-101949.72329  main.huangyues-MacBook-Pro.local.moon.log.INFO.20180717-102319.72468  main.huangyues-MacBook-Pro.local.moon.log.INFO.20180717-102420.72493  main.huangyues-MacBook-Pro.local.moon.log.INFO.20180717-103238.72862  main.huangyues-MacBook-Pro.local.moon.log.INFO.20180717-103535.72982  mxModel.toml  static-build-firefly.sh  wisdom
camera_conf/: config.toml  dist244.csv  mtx242.csv  mtx244.csv  rvec244.csv  tvec244.csv
conf/: 3dpnp.toml  config.toml  mxModel.toml  staple.yaml
conf/camera_conf/: config.toml  dist242.csv  rvec242.csv  tvec242.csv
configurations/: 4mm.toml  6mm.toml  config.toml  localcam.toml  sphere.toml  two-cameras.toml
cron/: check-folder
dev_keeper/: clickhouse-config.xml  clickhouse.sql  docker.txt  local_id_module_conf.toml
include/: Eigen  camera.h  face_age.h  face_align.h  face_attr.h  face_embed.h  face_pose_estimate.h  face_predict.h  face_sample.h  face_tracker.h  image_quality.h  mtcnn.h  time_utils.h  utils.h  vector_search.h
include/trackerKCF/: featureColorName.hpp  tracker.hpp
mms/: mxnet_vision_service.py
mms/mini-age/: MANIFEST.json  model-0000.params  model-symbol.json  signature.json
src/: .test_video.cpp.swp  camera.cpp  camera.h  detect_infer.cpp  face_age.cpp  face_align.cpp  face_attr.cpp  face_embed.cpp  face_pose_estimate.cpp  face_predict.cpp  face_predict_example.cpp  face_sample.cpp  face_tracker.cpp  image_quality.cpp  main.cpp  mtcnn.cpp  read_camera.cpp  test_click_house.cpp  test_face_align.cpp  test_face_quality.cpp  test_infer_service.cpp  test_picture.cpp  test_solvePnP.cpp  test_video.cpp  tracker_compare.cpp  utils.cpp  vector_search.cpp
src/trackerKCF/: CMakeLists.txt  tracker.cpp  trackerKCF.cpp
src/utils/: time_utils.cpp  utils.cpp
tests/: test_face_quality.cpp  test_get_time.cpp  test_video.cpp
